--- a/root/index.html
+++ b/root/index.html
@@ -157,10 +157,9 @@
           /* giallo chiarissimo */ #fff9c4 100% /* giallo canarino soft */);height: 10vh;">
     </div>
 
-    <div class="info-finali">
+    <div class="map-container">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2874.668463166594!2d10.532709975795125!3d43.90413283616568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12d57f552866f7eb%3A0xb645240e01a90adc!2sParco%20Divertimenti%20Il%20Castello%20di%20Alice!5e0!3m2!1sit!2sit!4v1756553997767!5m2!1sit!2sit"
-        style="border: 0; object-fit: contain; height: 100%; width: 60vw"
         allowfullscreen=""
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
@@ -168,7 +167,7 @@
     </div>
 
     <div
-      style="width: 100%; height: 100px; background-color: #009ee9; margin: 0px"
+      class="footer"
     ></div>
     <script>
       // Lista delle immagini disponibili
