fix responsive main info

--- a/root/index.html
+++ b/root/index.html
@@ -52,31 +52,10 @@
         <img src="./image.png" alt="" id="castello_di_alice_logo" />
       </div>
       <div
-        style="
-          width: 100%;
-          background-color: white;
-          align-items: center;
-          display: flex;
-          flex-direction: row;
-          padding-bottom: 10vh;
-        "
+        class="container-main-info"
       >
         <img src="./dragon_pink_pic.png" alt="" width="30%" id="dragon-pink" />
         <p
-          style="
-            width: 70%;
-            margin-right: 10%;
-            padding: 3vw;
-            font-family: 'Fredoka', Verdana, sans-serif;
-            font-size: 1.1rem;
-            font-weight: 500;
-            line-height: 1.7;
-            text-align: justify;
-            color: #222;
-            background-image: radial-gradient(#ffff,#ffd8b7);
-            border-radius: 20px;
-            box-shadow: 4px 4px 5px #ffd8b7;
-          "
           class="fade-in"
         >
           🎉 <strong style="color: #e63946">Al Castello di Alice</strong> a
