qualcosa di serio

--- a/root/index.html
+++ b/root/index.html
@@ -15,22 +15,22 @@
     <!-- NAVBAR-->
     <div class="navbar">
       <div class="nav-links">
-       <!-- <ul>
+        <ul>
         <li><a href="regolamento.html">Regolamento</a></li>
         <li><a href="novita.html">Novità</a></li>
         <li><a href="tour.html">Tour</a></li>
-        <li><a href="contatti.html">Contatti</a></li>
-      </ul>-->
+      </ul>
       </div>
 
       <img
         id="logo-pic"
         src="image2.png"
         alt="logo"
-        style="padding: 0rem; object-fit: contain; height: 90%"
+        style="padding: 0rem; object-fit: contain; height: 90%;"
       />
 
-      <div class="social-btn-container">
+      <div class="container-social-link">
+        <a href="contatti.html">Contatti</a>
       </div>
     </div>
 
