--- a/root/index.html
+++ b/root/index.html
@@ -26,7 +26,7 @@
         id="logo-pic"
         src="image2.png"
         alt="logo"
-        style="padding: 0rem; object-fit: contain; height: 90%;"
+        style="padding: 0rem; object-fit: contain; height: 90%; width: auto;"
       />
 
       <div class="container-social-link">
@@ -163,7 +163,7 @@
     ></div>
 
     <div class="footer">
-      <p>developed by Leonardo Signore</p>
+      <p>developed by sto cazzo</p>
     </div>
     <script>
       // Lista delle immagini disponibili
