regolamento.html navbar fixed

--- a/root/regolamento.html
+++ b/root/regolamento.html
@@ -11,35 +11,35 @@
     <title>regolamento</title>
   </head>
   <body>
-    <!-- NAVBAR-->
     <div class="navbar">
-      <div style="margin-left: 2vw">
-        <a href="./index.html">home</a>
-        <button>news</button>
-        <button>tour</button>
+      <div class="nav-links">
+        <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="novita.html">Novità</a></li>
+        <li><a href="tour.html">Tour</a></li>
+      </ul>
       </div>
 
       <img
         id="logo-pic"
         src="image2.png"
         alt="logo"
-        style="padding: 0rem; object-fit: contain; height: 90%"
+        style="padding: 0rem; object-fit: contain; height: 90%; width: auto;"
       />
 
-      <div style="margin-right: 2vw">
-        <button class="social-btn">
-          <i class="fa-brands fa-whatsapp"></i>
-        </button>
-        <button class="social-btn">
-          <i class="fa-brands fa-facebook"></i>
-        </button>
-        <button class="social-btn"><i class="fa-brands fa-tiktok"></i></button>
-        <button class="social-btn">
-          <i class="fa-brands fa-instagram"></i>
-        </button>
+      <div class="container-social-link">
+        <a href="contatti.html">Contatti</a>
       </div>
     </div>
-    <!-- FINE NAVBAR -->
+
+    <div
+    style="background-color: white;
+        height: 12vh;
+    "
+    >
+
+    </div>
+
     <div style="height: auto; background-color: white;">
       <p
         style="
