--- a/root/index.html
+++ b/root/index.html
@@ -24,7 +24,7 @@
 
       <img
         id="logo-pic"
-        src="image2.png"
+        src="./image2.png"
         alt="logo"
         style="padding: 0rem; object-fit: contain; height: 90%; width: auto;"
       />
@@ -37,22 +37,34 @@
     <!-- FINE NAVBAR -->
 
     <div style="height: 12vh; background-color: white;">
-
     </div>
 
-    <!-- INTRO -->
-    <div class="intro">
-      <div
+     <div
         style="
           display: flex;
-          flex-direction: row;
-          justify-content: center;
+          flex-direction: column;
+          justify-content: start;
           align-items: center;
+          background-image: url(./unnamed\ \(2\).jpg);
           background-color: white;
+          background-repeat: no-repeat;
+          background-size: cover;
+          background-position: center;
+          width: 100%;
+          height: 100vh;
+          border-bottom-left-radius: 45vh;
+          border-bottom-right-radius: 45vh;
+          margin-bottom: 10vh;
         "
       >
         <img src="./image.png" alt="" id="castello_di_alice_logo" />
       </div>
+
+
+
+    <!-- INTRO -->
+    <div class="intro">
+     
       <div class="container-main-info">
         <img src="./dragon_pink_pic.png" alt="" width="30%" id="dragon-pink" />
         <p class="fade-in">
@@ -163,7 +175,10 @@
     ></div>
 
     <div class="footer">
-      <p>developed by sto cazzo</p>
+      <label for="telefono">telefono</label>
+      <ul>
+        <li>00000000000</li>
+      </ul>
     </div>
     <script>
       // Lista delle immagini disponibili
