--- a/root/index.html
+++ b/root/index.html
@@ -42,22 +42,22 @@
      <div
         style="
           display: flex;
-          flex-direction: column;
-          justify-content: start;
+          justify-content: center;
           align-items: center;
-          background-image: url(./unnamed\ \(2\).jpg);
+          background-image: url(./sfondoprova.jpg);
           background-color: white;
           background-repeat: no-repeat;
           background-size: cover;
           background-position: center;
           width: 100%;
-          height: 100vh;
+          height: 80vh;
           border-bottom-left-radius: 45vh;
           border-bottom-right-radius: 45vh;
           margin-bottom: 10vh;
         "
       >
-        <img src="./image.png" alt="" id="castello_di_alice_logo" />
+        <h1 id="titolo">Castello di Alice</h1>
+        
       </div>
 
 
