--- a/root/index.html
+++ b/root/index.html
@@ -16,17 +16,23 @@
     <div class="navbar">
       <div class="nav-links">
         <ul>
-        <li><a href="regolamento.html">Regolamento</a></li>
-        <li><a href="novita.html">Novità</a></li>
-        <li><a href="tour.html">Tour</a></li>
-      </ul>
+          <li><a href="regolamento.html">Regolamento</a></li>
+          <li><a href="novita.html">Novità</a></li>
+          <li><a href="tour.html">Tour</a></li>
+        </ul>
+      </div>
+
+      <div class="hamburger-menu">
+        <button id="hamburger-btn">
+          <img src="./bars-solid-full.svg" alt="" />
+        </button>
       </div>
 
       <img
         id="logo-pic"
         src="./image2.png"
         alt="logo"
-        style="padding: 0rem; object-fit: contain; height: 90%; width: auto;"
+        style="padding: 0rem; object-fit: contain; height: 90%; width: auto"
       />
 
       <div class="container-social-link">
@@ -36,35 +42,38 @@
 
     <!-- FINE NAVBAR -->
 
-    <div style="height: 12vh; background-color: white;">
+    <div style="height: 12vh; background-color: white"></div>
+
+    <div
+      style="
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-image: url(./sfondoprova.jpg);
+        background-color: white;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        width: 100%;
+        height: 80vh;
+        border-bottom-left-radius: 45vh;
+        border-bottom-right-radius: 45vh;
+        margin-bottom: 10vh;
+      "
+    >
+      <h1 id="titolo">Castello di Alice</h1>
     </div>
 
-     <div
-        style="
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          background-image: url(./sfondoprova.jpg);
-          background-color: white;
-          background-repeat: no-repeat;
-          background-size: cover;
-          background-position: center;
-          width: 100%;
-          height: 80vh;
-          border-bottom-left-radius: 45vh;
-          border-bottom-right-radius: 45vh;
-          margin-bottom: 10vh;
-        "
-      >
-        <h1 id="titolo">Castello di Alice</h1>
-        
-      </div>
-
-
+    <div id="sidebar">
+      <ul>
+        <li style="border-top: 2px solid black;"><a href="regolamento.html">Regolamento</a></li>
+        <li><a href="novita.html">Novità</a></li>
+        <li><a href="tour.html">Tour</a></li>
+      </ul>
+    </div>
 
     <!-- INTRO -->
     <div class="intro">
-     
       <div class="container-main-info">
         <img src="./dragon_pink_pic.png" alt="" width="30%" id="dragon-pink" />
         <p class="fade-in">
@@ -188,11 +197,18 @@
       const mainImage = document.getElementById("mainImage");
       const prevBtn = document.getElementById("prevBtn");
       const nextBtn = document.getElementById("nextBtn");
+      const hamburgerBtn = document.getElementById("hamburger-btn");
+      const navlinks = document.querySelector(".nav-links");
+      const sidebar = document.getElementById("sidebar");
+
+      hamburgerBtn.addEventListener("click", () => {
+        sidebar.classList.toggle("active");
+      });
 
       // Funzione per aggiornare l'immagine
       function updateImage() {
         mainImage.classList.add("fade-out");
-
+        f;
         setTimeout(() => {
           mainImage.src = images[currentIndex];
           mainImage.classList.remove("fade-out");
