--- a/root/index.html
+++ b/root/index.html
@@ -28,12 +28,7 @@
         </button>
       </div>
 
-      <img
-        id="logo-pic"
-        src="./image2.png"
-        alt="logo"
-        style="padding: 0rem; object-fit: contain; height: 90%; width: auto"
-      />
+      <img id="logo-pic" src="./image2.png" alt="logo" />
 
       <div class="container-social-link">
         <a href="contatti.html">Contatti</a>
@@ -42,7 +37,9 @@
 
     <!-- FINE NAVBAR -->
 
-    <div style="height: 12vh; background-color: white"></div>
+    <div style="height: 12vh; background-color: white;">
+
+    </div>
 
     <div
       style="
@@ -58,7 +55,6 @@
         height: 80vh;
         border-bottom-left-radius: 45vh;
         border-bottom-right-radius: 45vh;
-        margin-bottom: 10vh;
       "
     >
       <h1 id="titolo">Castello di Alice</h1>
@@ -66,10 +62,16 @@
 
     <div id="sidebar">
       <ul>
-        <li style="border-top: 2px solid black;"><a href="regolamento.html">Regolamento</a></li>
+        <li><a href="regolamento.html">Regolamento</a></li>
         <li><a href="novita.html">Novità</a></li>
         <li><a href="tour.html">Tour</a></li>
       </ul>
+    </div>
+
+    <div class="mission-container">
+      <p>
+        Dove i sogni dei bambini diventano magia!
+      </p>
     </div>
 
     <!-- INTRO -->
@@ -226,13 +228,6 @@
         currentIndex = (currentIndex - 1 + images.length) % images.length; // evita numeri negativi
         updateImage();
       });
-
-      const img = document.getElementById("logo-pic");
-      img.addEventListener(
-        "mouseenter",
-        () => (img.src = "./kiss_castello_alice.png")
-      );
-      img.addEventListener("mouseleave", () => (img.src = "./image2.png"));
     </script>
   </body>
 </html>
