--- a/root/index.html
+++ b/root/index.html
@@ -13,6 +13,7 @@
 
   <body>
     <!-- NAVBAR-->
+
     <div class="navbar">
       <div class="nav-links">
         <ul>
@@ -21,18 +22,16 @@
           <li><a href="tour.html">Tour</a></li>
         </ul>
       </div>
-
-      <div class="hamburger-menu">
-        <button id="hamburger-btn">
-          <img src="./bars-solid-full.svg" alt="" />
+        <button class="btn-primary" >
+          <i class="fa-solid fa-bars"></i>
         </button>
-      </div>
 
-      <img id="logo-pic" src="./image2.png" alt="logo" />
+      <img id="logo-pic" src="./images/logo_castello_di_alice.png" alt="logo" />
 
       <div class="container-social-link">
         <a href="contatti.html">Contatti</a>
       </div>
+      <button class="btn-primary"><i class="fa-brands fa-whatsapp" style="color: green;"></i></button>
     </div>
 
     <!-- FINE NAVBAR -->
@@ -135,20 +134,13 @@
       "
     ></div>
 
-    <div class="image">
-      <button id="prevBtn" class="arrow-btn">
-        <i class="fa-solid fa-arrow-left"></i>
-      </button>
-      <img
-        id="mainImage"
-        src="castelloIMG.png"
-        alt="Castello di Alice"
-        width="90%"
-      />
-      <button id="nextBtn" class="arrow-btn">
-        <i class="fa-solid fa-arrow-right"></i>
-      </button>
-    </div>
+   <div class="container-gallery">
+    <div style="background-image: url('./imm1.jpg'); background-position: center; background-repeat: no-repeat; background-size: contain; ";></div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+   </div>
 
     <div
       style="
