Qualcosa ho fatto

--- a/root/index.html
+++ b/root/index.html
@@ -32,30 +32,13 @@
         <a href="contatti.html">Contatti</a>
       </div>
       <button id="telephone" class="btn-primary">
-        <i class="fa-brands fa-whatsapp" style="color: green;"></i>
+        <i class="fa-brands fa-whatsapp"></i>
       </button>
     </div>
 
     <!-- FINE NAVBAR -->
-
-    <div style="height: 12vh; background-color: white"></div>
-
     <div
-      style="
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-image: url(./sfondoprova.jpg);
-        background-color: white;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        width: 100%;
-        height: 80vh;
-        border-bottom-left-radius: 45vh;
-        border-bottom-right-radius: 45vh;
-        box-shadow: 2px 2px 5px gray;
-      "
+      class="titolo-container"
     >
       <h1 id="titolo">Castello di Alice</h1>
     </div>
@@ -67,10 +50,19 @@
         <li><a href="tour.html">Tour</a></li>
       </ul>
     </div>
+    </div>
+
+    <svg style="background-color: #94d2bd; display:block;" viewBox="0 0 1440 320" xmlns="http://www.w3.org/2000/svg">
+  <path fill="#e9d8a6" fill-opacity="1" 
+        d="M0,64L48,74.7C96,85,192,107,288,101.3C384,96,480,64,576,85.3C672,107,768,181,864,192C960,203,1056,149,1152,117.3C1248,85,1344,75,1392,69.3L1440,64L1440,0L0,0Z">
+  </path>
+</svg>
+
+<h1 style="padding-left: 20px; color: #bb3e03; background-color: #94d2bd;">Info</h1>
 
     <!-- INTRO -->
     <div class="container-main-info">
-      <img src="./dragon_pink_pic.png" alt="" width="30%" id="dragon-pink" />
+      <img src="./images/dragon_pink_pic.png" alt="" width="30%" id="dragon-pink" />
       <p class="fade-in">
         🎉 <strong style="color: #e63946">Al Castello di Alice</strong> a Ponte
         a Moriano (Lucca) potete organizzare
@@ -98,6 +90,25 @@
         Sabato 20:30 - 24:00
       </p>
     </div>
+
+    <svg style="background-color:#94d2bd; display:block; margin:0;" viewBox="0 0 1440 120" xmlns="http://www.w3.org/2000/svg" style="display:block">
+  <path fill="#005f73" d="M0,60 Q40,0 80,60 T160,60 T240,60 T320,60 T400,60 T480,60 T560,60 T640,60 T720,60 T800,60 T880,60 T960,60 T1040,60 T1120,60 T1200,60 T1280,60 T1360,60 T1440,60 V120 H0Z"/>
+</svg>
+
+    <div class="gallery">
+      <h1 style="color: #FFFF">I nostri servizi</h1>
+      <div class="img1"><p>1</p></div>
+      <div class="img2"><p>2</p></div>
+      <div class="img3"><p>3</p></div>
+      <div class="img4"></div>
+      <div class="img5"></div>
+    </div>
+
+    <svg style="background-color: #005f73" viewBox="0 0 1440 80" xmlns="http://www.w3.org/2000/svg" style="display:block">
+  <path fill="#ee9b00" d="M0,0 60,80 120,0 180,80 240,0 300,80 360,0 420,80 480,0 540,80 600,0 660,80 720,0 780,80 840,0 900,80 960,0 1020,80 1080,0 1140,80 1200,0 1260,80 1320,0 1380,80 1440,0 V80 H0Z"/>
+</svg>
+
+    <h1 style="padding-top:100px; background-color: #ee9b00; color: #e9d8a6;">Dove siamo</h1>
 
     <div class="map-container">
       <iframe
